		-[Core] Added 'torn lifestyle' diagnostic warning (work item 20975).
		-[Core] Added 'disposable transient' diagnostic warning (work item 20957).
		-[Core] Added support for resolving assignable variant implementations in collections registered
		 with RegisterAll (work item 20984).
		-[Core] AppendToCollection extension methods now support open-generic types (work item 20985).

	Bug fixes:
		-[Core]: In case a constructor of a type contained a primitive dependency, while the type was resolved
		 as part of a collection or directly by building the Registration, the thrown exception message was
		 misleading. (work item 20986).


Version 2.6.2 (v2.6.2 RTM) 2014-12-24

	Bug fixes:
		-[WebApi] The GetCurrentHttpRequestMessage() method returned null inside a nested execution context 
		 scope. (work item 20987).


Version 2.6.1 (v2.6.1 RTM) 2014-10-26

	Bug fixes:
		-[Core] Improved the exception messages in case unregistered delegates are resolved. (work item 20980)
		-[Core] Resolving unregistered concrete type with overloaded lifestyle selection behavior wasn't
		 thread-safe. (work item 20976)


Version 2.6.0 (v2.6.0 RTM) 2014-10-14

	New features:
		-[Core] RegisterAll now allows registering open-generic types as well. (work item 20971)
		-[Core] New Container.Options.LifestyleSelectionBehavior extendibility point added to allow overriding
		 the container's behavior to register type's with the Transient lifestyle. This is especially useful
		 for batch-registration scenarios. (work item 20965)
		-[Core] DecoratorContext can now be injected into a decorator that is registered using the
		 RegisterDecorator extension methods. (work item 20959)
		-[Core] InstanceProducer.VisualizeObjectGraph() method added to allow visualizing the object graph
		 of an registration. Feature also added in the debugger view. (work item 20954)
		-[Core] Container.GetRootRegistrations() method added that allows retrieving all root registrations.